# utils-rs

./: .gitignore  Cargo.toml  README.md
src/: chain.rs  channel.rs  envelope.rs  epsilon.rs  factorisation.rs  fps.rs  gaussian.rs  iter.rs  lib.rs  linked_list.rs  math.rs  mod.rs  noise_walk.rs  signal.rs  vec.rs
tests/: chain.rs
