[package]

name = "mindtree_utils"
description = "Miscellaneous utilities from the sleeve of mindtree."
version = "0.1.3"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["utils", "math", "iterator"]
license = "MIT"
repository = "https://github.com/mitchmindtree/utils-rs.git"
homepage = "https://github.com/mitchmindtree/utils-rs"

[lib]
name = "utils"

[dependencies]
rand = "*"
rustc-serialize = "*"
time = "*"
